--- a/src/sections/GridSection.scss
+++ b/src/sections/GridSection.scss
@@ -1,4 +1,5 @@
 .grid-section {
+  --subtitle-font-size: var(--bloom-font-size-xs);
   .grid-item {
     @apply mb-4;
     overflow-wrap: break-word; // temp fix
@@ -27,6 +28,12 @@
   @apply flex-col;
 }
 
+.grid-section__header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .grid-section__title {
   @apply font-alt-sans;
   @apply text-xl;
@@ -43,7 +50,7 @@
   @apply uppercase;
   @apply font-alt-sans;
   @apply font-bold;
-  @apply text-xs;
+  font-size: var(--subtitle-font-size);
   @apply tracking-widest;
   @apply w-full;
   @apply mt-4;
@@ -69,4 +76,7 @@
   &.is-reversed {
     direction: rtl;
   }
+}
+.grid-section__edit-link {
+  margin-top: var(--bloom-s1);
 }
